--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,9 +14,9 @@ jobs:
           echo "Organization Name: $GITHUB_REPOSITORY_OWNER"
           echo "Repository Name: ${GITHUB_REPOSITORY#*/}"
           echo "PR Number: ${PR_NUMBER}"
-          echo "Commit SHA: ${GITHUB_SHA}"
+          echo "Commit SHA: ${BLA}"
         env:
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-          GITHUB_SHA: ${{ github.event.pull_request.head.sha }}
+          BLA: ${{ github.event.pull_request.head.sha }}
