--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -22,4 +22,4 @@ jobs:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-        run: ./jit-cli container --image mongo --image-name docker.io/mongo --add-to-backlog
+        run: ./jit-cli container --image zricethezav/gitleaks --image-name zricethezav/gitleaks --add-to-backlog
