--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -13,15 +13,16 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker pull zricethezav/gitleaks
-          docker tag zricethezav/gitleaks gitleaks 
+          docker load -i vulnerable.tar
+          
           sudo apt-get update && sudo apt-get install -y curl git
           curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-test-our-solution-on-various-machines/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
-
-      - name: Run Jit CLI Scan
+          
+          ./jit-cli container --image $IMAGE --image-name $TRACKING_NAME --add-to-backlog
         env:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-        run: ./jit-cli container --image gitleaks --image-name zricethezav/gitleaks --add-to-backlog
+          IMAGE: local-gitleaks
+          TRACKING_NAME: test/gitleaks
