--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -16,10 +16,10 @@ jobs:
           docker load -i vulnerable.tar
           
           sudo apt-get update && sudo apt-get install -y curl git
-          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-test-our-solution-on-various-machines/jit-cli-amd64-slim -o jit-cli
+          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-bugsquashing-imrove-args/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
           
-          ./jit-cli container --image $IMAGE --image-name $TRACKING_NAME --add-to-backlog
+          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
         env:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
