--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -19,10 +19,10 @@ jobs:
           curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/main/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
           
-          ./jit-cli container --image vulnerable.tar --tracking-name $TRACKING_NAME --add-to-backlog
+          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
         env:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-          IMAGE: local-gitleaks
+          IMAGE: "--input vulnerable.tar"
           TRACKING_NAME: test/gitleaks
