--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -24,5 +24,5 @@ jobs:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-          IMAGE: "--input vulnerable.tar"
+          IMAGE: "-i vulnerable.tar"
           TRACKING_NAME: test/gitleaks
