--- a/.github/workflows/build-mongo.yml
+++ b/.github/workflows/build-mongo.yml
@@ -16,7 +16,7 @@ jobs:
           # docker load -i vulnerable.tar
           
           sudo apt-get update && sudo apt-get install -y curl git
-          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/main/jit-cli-amd64-slim -o jit-cli
+          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-bugsquashing-supporting-tar-scan/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
           
           ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
@@ -24,5 +24,5 @@ jobs:
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-          IMAGE: "-i$20vulnerable.tar\""
-          TRACKING_NAME: test/gitleaks
+          IMAGE: vulnerable.tar
+          TRACKING_NAME: test/gitleaks2
