--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,59 @@
+# name: Docker Hello World
+
+# on:
+#   workflow_dispatch:
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v4
+
+#       - name: Build Docker image
+#         run: |
+#           echo -e 'FROM alpine:3.10\nCMD ["echo", "Hello World"]' > Dockerfile
+#           docker build -t hello-world-image .
+          
+#           sudo apt-get update && sudo apt-get install -y curl git
+#           curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-bugsquashing-imrove-args/jit-cli-amd64-slim -o jit-cli
+#           chmod +x jit-cli
+
+#           ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
+#         env:
+#           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
+#           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
+#           ENV_NAME: bandit
+#           IMAGE: hello-world-image
+#           TRACKING_NAME: registry/jonathan
 name: Docker Hello World
+
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  pr-info:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
-      - name: Build Docker image
+      
+      - name: Print PR Info using env vars
         run: |
-          echo -e 'FROM alpine:3.10\nCMD ["echo", "Hello World"]' > Dockerfile
-          docker build -t hello-world-image .
+          docker load -i vulnerable.tar
           
           sudo apt-get update && sudo apt-get install -y curl git
-          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/sc-29437-bugsquashing-imrove-args/jit-cli-amd64-slim -o jit-cli
+          curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/main/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
-
-          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
+          
+          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --organization $GITHUB_REPOSITORY_OWNER --repo ${GITHUB_REPOSITORY#*/} --add-to-backlog
         env:
+          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          COMMIT_ID: ${{ github.event.pull_request.head.sha }}  
           JIT_CLIENT_ID: ${{ secrets.JIT_CLIENT_ID }}
           JIT_SECRET_KEY: ${{ secrets.JIT_SECRET_KEY }}
           ENV_NAME: bandit
-          IMAGE: hello-world-image
-          TRACKING_NAME: registry/jonathan
+          IMAGE: local-gitleaks
+          TRACKING_NAME: test/gitleaks
