--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/main/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
           
-          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --organization $GITHUB_REPOSITORY_OWNER --repo ${GITHUB_REPOSITORY#*/} --add-to-backlog
+          ./jit-cli container --image $IMAGE --tracking-name $TRACKING_NAME --add-to-backlog
         env:
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
           GITHUB_REPOSITORY: ${{ github.repository }}
