--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Print PR Info using env vars
         run: |
           docker load -i vulnerable.tar
-          docker tag local-gitleaks AAAAAAANEW
+          docker tag local-gitleaks aaaaaaaanew
           sudo apt-get update && sudo apt-get install -y curl git
           curl -L https://jit-cli.s3.us-east-1.amazonaws.com/jit-cli/main/jit-cli-amd64-slim -o jit-cli
           chmod +x jit-cli
